# Whisper-Ng

./: .gitignore  DATASET_LIST.md  MOZILLA_INTEGRATION_README.md  README.md  app.py  download_mozilla_datasets.py  eval_samples.json  fix_checkpoint.py  generate_test_dashboard.py  make_presentation.py  mozilla_dataset_loader.py  pyproject.toml  search_mozilla_datasets.py  test_checkpoint_load.py  test_hf_graphs.py  test_langs.py  test_local.py  test_mlx_conversion.py  test_multilingual.py  test_pred.py  test_training_graphs.py  train_multilingual_whisper_hf.py  train_multilingual_whisper_mlx.py  train_whisper.py  train_yoruba_whisper_hf.py  train_yoruba_whisper_mlx.py  training_log.txt  training_out_mlx.txt  transcribe_microphone.py  transcribe_realtime.py  transcribe_with_finetuned.py  ~$Whisper_NG_Conference_Presentation.pptx
docs/: 01_experiment_overview.md  02_orthography_and_normalization.md  03_dataset_distribution_and_splits.md  04_training_observations.md  05_low_resource_challenges.md
hf/: debug_lora.py  eval_lora_whisper.py  gradio_test.py  lora_whisper.py  test_checkpoint_load.py  train_multilingual_whisper_hf.py  train_multilingual_whisper_with_mozilla.py
lora/: Whisper_Nigerian_LoRA.ipynb  Whisper_w_PEFT.ipynb  eval_lora_whisper.py
mlx/: convert_hf_to_mlx.py  train_multilingual_whisper_mlx.py
slides/: build_pptx.py  package.json  screenshot.js  slide01.html  slide02.html  slide03.html  slide04.html  slide05.html  slide06.html  slide07.html  slide08.html  slide09.html  slide10.html  slide11.html  slide12.html  slide13.html
slides-light/: apply_light_theme.py  build_pptx.py  screenshot.js  slide01.html  slide02.html  slide03.html  slide04.html  slide05.html  slide06.html  slide07.html  slide08.html  slide09.html  slide10.html  slide11.html  slide12.html  slide13.html
whisper-small-nigerian/: best_model_info.json  training_log_20260421_204612.txt
whisper-small-nigerian-lora/: tokenizer.json  tokenizer_config.json
whisper-small-nigerian-lora/checkpoint-1000/: README.md  adapter_config.json  trainer_state.json
whisper-small-nigerian-lora/checkpoint-960/: trainer_state.json
whisper-small-nigerian/checkpoint-3000/: trainer_state.json
whisper-small-nigerian/checkpoint-4000/: config.json  generation_config.json  trainer_state.json
(+4 files in other folders)
