[project]
name = "whisper-ng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.0.0",
    "datasets>=3.0.0",
    "evaluate>=0.4.0",
    "jiwer>=3.0.0",
    "matplotlib>=3.9.0",
    "mlx>=0.22.0",
    "mlx-whisper>=0.4.0",
    "numpy>=2.0.0",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "streamlit>=1.55.0",
    "tensorboard>=2.18.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
