[project]
name = "whisper-ng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.0.0",
    "datasets<3",
    "evaluate>=0.4.0",
    "ffmpeg>=1.4",
    "jiwer>=3.0.0",
    "librosa>=0.11.0",
    "matplotlib>=3.9.0",
    "numpy>=2.0.0",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "streamlit>=1.55.0",
    "tensorboard>=2.18.0",
    "trackio>=0.20.0",
    "transformers>=5.3.0",
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
    "torchvision>=0.20.0",
    "bitsandbytes>=0.49.2",
    "peft>=0.19.1",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.22.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "mlx-whisper>=0.4.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }


